[gd_scene load_steps=5 format=3 uid="uid://f23eh00fbej4"]

[ext_resource type="Script" uid="uid://7oy3c8wr1bcw" path="res://demo/node_tunnel_demo.gd" id="1_nk7jj"]
[ext_resource type="Texture2D" uid="uid://cgr8ufm2ra5lk" path="res://icon.svg" id="2_81dm8"]
[ext_resource type="Script" uid="uid://bcsq55afjklge" path="res://demo/sprite_2d.gd" id="3_e3iq8"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_e3iq8"]
properties/0/path = NodePath("Sprite2D:position")
properties/0/spawn = true
properties/0/replication_mode = 1

[node name="NodeTunnel Demo" type="Node2D"]
script = ExtResource("1_nk7jj")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Host" type="Button" parent="UI"]
offset_left = 52.0
offset_top = 11.0
offset_right = 96.0
offset_bottom = 42.0
text = "Host"

[node name="Join" type="Button" parent="UI"]
offset_left = 49.0
offset_top = 65.0
offset_right = 87.0
offset_bottom = 96.0
text = "Join"

[node name="HostID" type="LineEdit" parent="UI"]
offset_left = 101.0
offset_top = 67.0
offset_right = 169.5625
offset_bottom = 98.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(572, 329)
texture = ExtResource("2_81dm8")
script = ExtResource("3_e3iq8")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_e3iq8")

[connection signal="pressed" from="UI/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="UI/Join" to="." method="_on_join_pressed"]
